# Khoa_luan_SDB

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/models/: README.md
data/: README.md
docs/: ARTIFACTS_MANIFEST.md  INFERENCE.md  KAGGLE_AUTOSHOT_PHASE2.md  MERGE_NOTES.md  WEB.md  WEB_DEPLOY.md
publications/paper/: README.md  main.tex
publications/thesis/: README.md  main.tex  requirements.txt
reports/: ablation_no_ema_summary_report.md  experimental_results.json  experimental_results_summary.md  literature_results.json  paper_analysis_results.json  postprocess_calibration_results.json  postprocess_calibration_summary.md  thesis_revision_action_plan.md
reports/deploy_results/: bbc_shot_inference_results.json  bbc_shots_gt_scenes_metadata.json  clipshot_test_inference_results.json  clipshots_test_gt_scenes_metadata.json  phase2_eval_gt_scenes_dict_baseline_v2_results.json  shot_test_inference_results.json
reports/ema_study/: README.md  report_ema_alpha999.md  report_ema_vs_noema.md  results_autoshot_alpha999.json  results_autoshot_noema.json  results_bbc_alpha999.json  results_bbc_noema.json  results_clipshots_alpha999.json  results_clipshots_noema.json
reports/source_results/: ablation_results.json  (+2 more)
scripts/: build_paper.ps1  build_thesis.ps1  run_ablation_experiments.py  run_journal_study.py  sync_experimental_results.py
tests/: test_common.py  test_experimental_results.py  test_run_journal_study.py  test_runtime.py  test_smoke.py  test_web_backend.py
(+92 files in other folders)
