[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autoshotv2"
version = "0.1.0"
description = "AutoShotV2: shot boundary detection (Phase2 head + post-process calibration)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "einops",
    "ffmpeg-python",
    "matplotlib",
]

[project.scripts]
autoshotv2-train = "autoshotv2.train_phase2:main"
autoshotv2-eval = "autoshotv2.eval:main"
autoshotv2-calibrate = "autoshotv2.postprocess_calibration:main"
autoshotv2-ablation = "autoshotv2.ablation:main"
autoshotv2-train-ema = "autoshotv2.train_ema:main"
autoshotv2-ema-report = "autoshotv2.ema_report:main"

[tool.setuptools.packages.find]
where = ["src"]
